# world-cup-project

./: .env.example  .gitignore  AGENTS.md  INSTRUCOES.txt  Makefile  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pyproject.toml
app/: README.md  __init__.py  config.py  globals.css  layout.tsx  main.py  ollama_client.py  page.tsx  sql_assistant.py
client/: README.md
client/app/: layout.tsx
client/hooks/: use-sql-assistant.ts
client/lib/: home-routing.ts
components/: query-provider.tsx
components/home/: command-center.tsx  dashboard-shell.tsx  database-section.tsx  detail-views.tsx  groups-section.tsx  history-section.tsx  home-config.ts  home-types.ts  inspector-panel.tsx  knockout-section.tsx  matches-section.tsx  overview-section.tsx  panel-states.tsx  section-heading.tsx  teams-section.tsx  theme-toggle.tsx  top-scorers-section.tsx
components/natural-query/: natural-query-drawer.tsx  natural-query-panel.tsx
docs/: api.md  architecture.md  getting-started.md  index.md  troubleshooting.md
hooks/: use-async-resource.ts  use-mobile.ts  use-sql-assistant.ts  use-world-cup-dashboard.ts
lib/: home-routing.ts
lib/services/: http-client.ts
modeling/: entity-relationship.xml  relational-model.xml
screenshots/: README.md
sql/: ddl.sql  dml.sql  queries.sql  synthetic_support.sql  verification.sql
submission/: 05.DDL.sql  06.DML.sql  08.Instrucoes.txt
world_cup_core/: __init__.py  db.py  repository.py  sql_assistant.py
world_cup_terminal/: __init__.py  __main__.py  cli.py  models.py  query_catalog.py  rich_render.py  services.py  tui.py
(+54 files in other folders)
